Upd Templating Login, Register, NotFound

--- a/Web/Views/Dashboard/Index.cshtml
+++ b/Web/Views/Dashboard/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Dashboard";
     Layout = "~/Views/Layout/_Layout.cshtml";
 }
 
@@ -16,7 +16,7 @@
                         </div>
                         <div class="col col-stats ml-3 ml-sm-0">
                             <div class="numbers">
-                                <p class="card-category">Visitors</p>
+                                <p class="card-category">Employee</p>
                                 <h4 class="card-title">1,294</h4>
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="col col-stats ml-3 ml-sm-0">
                             <div class="numbers">
-                                <p class="card-category">Subscribers</p>
+                                <p class="card-category">Trainer</p>
                                 <h4 class="card-title">1303</h4>
                             </div>
                         </div>
@@ -54,7 +54,7 @@
                         </div>
                         <div class="col col-stats ml-3 ml-sm-0">
                             <div class="numbers">
-                                <p class="card-category">Sales</p>
+                                <p class="card-category">Schedule</p>
                                 <h4 class="card-title">$ 1,345</h4>
                             </div>
                         </div>
