upd template verify

--- a/Web/Views/Dashboard/Index.cshtml
+++ b/Web/Views/Dashboard/Index.cshtml
@@ -82,3 +82,115 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title">Feed Activity</div>
+                </div>
+                <div class="card-body">
+                    <ol class="activity-feed">
+                        <li class="feed-item feed-item-secondary">
+                            <time class="date" datetime="9-25">Sep 25</time>
+                            <span class="text">Responded to need <a href="#">"Volunteer opportunity"</a></span>
+                        </li>
+                        <li class="feed-item feed-item-success">
+                            <time class="date" datetime="9-24">Sep 24</time>
+                            <span class="text">Added an interest <a href="#">"Volunteer Activities"</a></span>
+                        </li>
+                        <li class="feed-item feed-item-info">
+                            <time class="date" datetime="9-23">Sep 23</time>
+                            <span class="text">Joined the group <a href="single-group.php">"Boardsmanship Forum"</a></span>
+                        </li>
+                        <li class="feed-item feed-item-warning">
+                            <time class="date" datetime="9-21">Sep 21</time>
+                            <span class="text">Responded to need <a href="#">"In-Kind Opportunity"</a></span>
+                        </li>
+                        <li class="feed-item feed-item-danger">
+                            <time class="date" datetime="9-18">Sep 18</time>
+                            <span class="text">Created need <a href="#">"Volunteer Opportunity"</a></span>
+                        </li>
+                        <li class="feed-item">
+                            <time class="date" datetime="9-17">Sep 17</time>
+                            <span class="text">Attending the event <a href="single-event.php">"Some New Event"</a></span>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-head-row">
+                        <h4 class="card-title">Top Trainer</h4>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="table-responsive table-hover table-sales">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Judul Buku</th>
+                                            <th>Penulis</th>
+                                            <th>Jumlah Buku</th>
+                                            <th>Harga</th>
+                                            <th>Total</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Kamus Istilah Internet</td>
+                                            <td>wang cun</td>
+                                            <td class="text-right">34</td>
+                                            <td class="text-right">145.000</td>
+                                            <td class="text-right">5</td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Ilmu Pengetahuan Sosial</td>
+                                            <td>Nur Wahyu Rochmadi</td>
+                                            <td class="text-right">20</td>
+                                            <td class="text-right">85.000</td>
+                                            <td class="text-right">3</td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Kamus Matematika</td>
+                                            <td>ario</td>
+                                            <td class="text-right">34</td>
+                                            <td class="text-right">110.000</td>
+                                            <td class="text-right">3</td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Hayuukk</td>
+                                            <td>Satria</td>
+                                            <td class="text-right">34</td>
+                                            <td class="text-right">30.000.000</td>
+                                            <td class="text-right">3</td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>Dasar Kewirausahaan</td>
+                                            <td>Ir. Hendro</td>
+                                            <td class="text-right">23</td>
+                                            <td class="text-right">50.000</td>
+                                            <td class="text-right">2</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
