--- a/Web/Views/Auth/Login.cshtml
+++ b/Web/Views/Auth/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="login">
     <div class="wrapper wrapper-login">
         <div class="container container-login animated fadeIn">
-            <h3 class="text-center">Sign In To Admin</h3>
+            <h3 class="text-center">Sign In</h3>
             <div class="login-form">
                 <div class="form-group form-floating-label">
                     <input type="text" id="username" name="username" class="form-control input-border-bottom" required>
