upd module training

--- a/Web/Views/Auth/Login.cshtml
+++ b/Web/Views/Auth/Login.cshtml
@@ -42,5 +42,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/Scripts/AuthScript.js"></script>
+    @*<script src="~/js/Scripts/AuthScript.js"></script>*@
 }
