--- a/Web/Views/Dashboard/Index.cshtml
+++ b/Web/Views/Dashboard/Index.cshtml
@@ -87,7 +87,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title">Feed Activity</div>
+                    <div class="card-title">Log Activity</div>
                 </div>
                 <div class="card-body">
                     <ol class="activity-feed">
@@ -135,52 +135,42 @@
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th>Judul Buku</th>
-                                            <th>Penulis</th>
-                                            <th>Jumlah Buku</th>
-                                            <th>Harga</th>
-                                            <th>Total</th>
+                                            <th>Trainer</th>
+                                            <th>Title</th>
+                                            <th>Type Training</th>
+                                            <th class="text-center">Rate</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Kamus Istilah Internet</td>
                                             <td>wang cun</td>
-                                            <td class="text-right">34</td>
-                                            <td class="text-right">145.000</td>
-                                            <td class="text-right">5</td>
+                                            <td>Kamus Istilah Internet</td>
+                                            <td>Soft Skill</td>
+                                            <td>5 Stars</td>
                                         </tr>
-
                                         <tr>
-                                            <td>Ilmu Pengetahuan Sosial</td>
-                                            <td>Nur Wahyu Rochmadi</td>
-                                            <td class="text-right">20</td>
-                                            <td class="text-right">85.000</td>
-                                            <td class="text-right">3</td>
+                                            <td>wang cun</td>
+                                            <td>Kamus Istilah Internet</td>
+                                            <td>Soft Skill</td>
+                                            <td>5 Stars</td>
                                         </tr>
-
                                         <tr>
-                                            <td>Kamus Matematika</td>
-                                            <td>ario</td>
-                                            <td class="text-right">34</td>
-                                            <td class="text-right">110.000</td>
-                                            <td class="text-right">3</td>
+                                            <td>wang cun</td>
+                                            <td>Kamus Istilah Internet</td>
+                                            <td>Soft Skill</td>
+                                            <td>5 Stars</td>
                                         </tr>
-
                                         <tr>
-                                            <td>Hayuukk</td>
-                                            <td>Satria</td>
-                                            <td class="text-right">34</td>
-                                            <td class="text-right">30.000.000</td>
-                                            <td class="text-right">3</td>
+                                            <td>wang cun</td>
+                                            <td>Kamus Istilah Internet</td>
+                                            <td>Soft Skill</td>
+                                            <td>5 Stars</td>
                                         </tr>
-
                                         <tr>
-                                            <td>Dasar Kewirausahaan</td>
-                                            <td>Ir. Hendro</td>
-                                            <td class="text-right">23</td>
-                                            <td class="text-right">50.000</td>
-                                            <td class="text-right">2</td>
+                                            <td>wang cun</td>
+                                            <td>Kamus Istilah Internet</td>
+                                            <td>Soft Skill</td>
+                                            <td>5 Stars</td>
                                         </tr>
                                     </tbody>
                                 </table>
