--- a/Web/Views/Layout/_Layout.cshtml
+++ b/Web/Views/Layout/_Layout.cshtml
@@ -170,7 +170,7 @@
                             </a>
                             <div class="collapse" id="feedback">
                                 <ul class="nav nav-collapse">
-                                    <li><a href="#"><span class="sub-item">Question</span></a></li>
+                                    <li><a href="/question"><span class="sub-item">Question</span></a></li>
                                     <li><a href="#"><span class="sub-item">Report</span></a></li>
                                 </ul>
                             </div>
