--- a/Web/Views/Feedback/Training.cshtml
+++ b/Web/Views/Feedback/Training.cshtml
@@ -21,7 +21,7 @@
             <div class="card-body">
                 <!-- Modal -->
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
+                    <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
                             <div class="modal-header no-bd">
                                 <h5 class="modal-title"><span class="fw-mediumbold">Form Data</span></h5>
@@ -33,12 +33,55 @@
                                 <form>
                                     <div class="row">
                                         <input type="text" id="Id" name="Id" class="form-control" hidden>
-                                        <div class="col-sm-12">
+                                        <div class="col-md-6">
                                             <div class="form-group form-group-default">
-                                                <label>Type</label>
-                                                <input type="text" id="Type" name="Type" class="form-control" placeholder="fill Type">
+                                                <label>Trainer</label>
+                                                <select class="form-control" id="UserOption" name="UserOption"></select>
                                             </div>
                                         </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group form-group-default">
+                                                <label>Title</label>
+                                                <input type="text" id="Title" name="Title" class="form-control" placeholder="fill Title">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group form-group-default">
+                                                <label>Schedule Date</label>
+                                                <input type="date" id="ScheduleDate" name="ScheduleDate" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group form-group-default">
+                                                <label>Schedule Time</label>
+                                                <input type="time" id="ScheduleTime" name="ScheduleTime" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group form-group-default">
+                                                <label>Type</label>
+                                                <select class="form-control" id="TypeOption" name="TypeOption"></select>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group form-group-default">
+                                                <label>Location</label>
+                                                <input type="text" id="Location" name="Location" class="form-control" placeholder="fill Location">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group form-group-default">
+                                                <label>Target Audience</label>
+                                                <input type="text" id="Target" name="Target" class="form-control" placeholder="fill Target Audience">
+                                            </div>
+                                        </div>
+
                                     </div>
                                 </form>
                             </div>
