module feedback for user

--- a/Web/Views/Layout/_Layout.cshtml
+++ b/Web/Views/Layout/_Layout.cshtml
@@ -144,10 +144,12 @@
                                 <span class="badge badge-count">5</span>
                             </a>
                         </li>
+                        
                         <li class="nav-section">
                             <span class="sidebar-mini-icon"><i class="fa fa-ellipsis-h"></i></span>
-                            <h4 class="text-section">Components</h4>
+                            <h4 class="text-section">Features</h4>
                         </li>
+
                         <li class="nav-item">
                             <a data-toggle="collapse" href="#base">
                                 <i class="fas fa-layer-group"></i>
@@ -171,7 +173,7 @@
                             <div class="collapse" id="feedback">
                                 <ul class="nav nav-collapse">
                                     <li><a href="/question"><span class="sub-item">Question</span></a></li>
-                                    <li><a href="#"><span class="sub-item">Report</span></a></li>
+                                    <li><a href="/feedback"><span class="sub-item">Report</span></a></li>
                                 </ul>
                             </div>
                         </li>
@@ -192,10 +194,26 @@
                             </div>
                         </li>
 
+                        <!-- Trainer -->
+                        <li class="nav-item">
+                            <a href="#">
+                                <i class="far fa-question-circle"></i>
+                                <p>Create Question</p>
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a href="widgets.html">
-                                <i class="fas fa-desktop"></i>
-                                <p>Widgets</p>
+                                <i class="far fa-comments"></i>
+                                <p>View Feedback</p>
+                            </a>
+                        </li>
+
+                        <!-- Employee -->
+                        <li class="nav-item">
+                            <a href="widgets.html">
+                                <i class="far fa-comments"></i>
+                                <p>Feedback</p>
                             </a>
                         </li>
 
