upd module auth

--- a/Web/Views/Auth/Register.cshtml
+++ b/Web/Views/Auth/Register.cshtml
@@ -22,7 +22,7 @@
                     <label for="email" class="placeholder">Email</label>
                 </div>
                 <div class="form-group form-floating-label">
-                    <input id="Pass" name="Pass" type="password" class="form-control input-border-bottom" required>
+                    <input type="password" id="Pass" name="Pass" class="form-control input-border-bottom" required>
                     <label for="passwordsignin" class="placeholder">Password</label>
                     <div class="show-password">
                         <i class="flaticon-interface"></i>
@@ -36,7 +36,6 @@
                     </div>
                 </div>
                 <div class="form-action">
-                    @*<a href="#" id="show-signin" class="btn btn-danger btn-rounded btn-login mr-3">Cancel</a>*@
                     <a href="#" id="regis" class="btn btn-primary btn-rounded btn-login" onclick="Register();">Sign Up</a>
                 </div>
                 <div class="login-account">
@@ -49,5 +48,5 @@
 </div>
 
 @section Scripts{
-    @*<script src="~/js/Scripts/AuthScript.js"></script>*@
+    <script src="~/js/Scripts/AuthScript.js"></script>
 }
