--- a/Web/Views/Auth/Login.cshtml
+++ b/Web/Views/Auth/Login.cshtml
@@ -10,11 +10,11 @@
             <h3 class="text-center">Sign In</h3>
             <div class="login-form">
                 <div class="form-group form-floating-label">
-                    <input type="text" id="username" name="username" class="form-control input-border-bottom" required>
-                    <label for="username" class="placeholder">Username</label>
+                    <input type="email" id="Email" name="Email" class="form-control input-border-bottom" required>
+                    <label for="username" class="placeholder">Email</label>
                 </div>
                 <div class="form-group form-floating-label">
-                    <input type="password" id="password" name="password" class="form-control input-border-bottom" required>
+                    <input type="password" id="Password" name="Password" class="form-control input-border-bottom" required>
                     <label for="password" class="placeholder">Password</label>
                     <div class="show-password">
                         <i class="flaticon-interface"></i>
@@ -42,5 +42,5 @@
 </div>
 
 @section Scripts{
-    @*<script src="~/js/Scripts/AuthScript.js"></script>*@
+    <script src="~/js/Scripts/AuthScript.js"></script>
 }
