--- a/Web/Views/Layout/_Layout.cshtml
+++ b/Web/Views/Layout/_Layout.cshtml
@@ -1,4 +1,19 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@{
+
+    var userId = Context.Session.GetString("id");
+    var name = Context.Session.GetString("uname");
+    var mail = Context.Session.GetString("email");
+    var level = Context.Session.GetString("lvl");
+    var code = Context.Session.GetString("code");
+    var color = "";
+    if (name == null && level == null && code != null)
+    {
+        Context.Response.Redirect("/login");
+
+    }
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +43,19 @@
         <!--
                 Tip 1: You can change the background color of the main header using: data-background-color="blue | purple | light-blue | green | orange | red"
         -->
-        <div class="main-header" data-background-color="purple">
+        @if (level == "Admin")
+        {
+            color = "purple";
+        }
+        else if (level == "Trainer")
+        {
+            color = "light-blue";
+        }
+        else
+        {
+            color = "orange";
+        }
+        <div class="main-header" data-background-color=@color>
             <!-- Logo Header -->
             <div class="logo-header">
 
@@ -99,7 +126,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown hidden-caret">
-                            <a class="nav-link dropdown-toggle" href="#" role="button">
+                            <a class="nav-link dropdown-toggle" href="/logout" role="button">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
                         </li>
@@ -122,8 +149,10 @@
                         <div class="info">
                             <a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
                                 <span>
-                                    Admin
-                                    <span class="user-level">Administrator</span>
+                                    Admin @name
+                                    <span class="user-level">
+                                        @level
+                                    </span>
                                     <span class="caret"></span>
                                 </span>
                             </a>
@@ -144,78 +173,85 @@
                                 <span class="badge badge-count">5</span>
                             </a>
                         </li>
-                        
+
                         <li class="nav-section">
                             <span class="sidebar-mini-icon"><i class="fa fa-ellipsis-h"></i></span>
                             <h4 class="text-section">Features</h4>
                         </li>
 
-                        <li class="nav-item">
-                            <a data-toggle="collapse" href="#base">
-                                <i class="fas fa-layer-group"></i>
-                                <p>Training</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="base">
-                                <ul class="nav nav-collapse">
-                                    <li><a href="/training"><span class="sub-item">Schedule</span></a></li>
-                                    <li><a href="/typetrain"><span class="sub-item">Type</span></a></li>
-                                </ul>
-                            </div>
-                        </li>
+                        @if (level == "Admin")
+                        {
+                            <li class="nav-item">
+                                <a data-toggle="collapse" href="#base">
+                                    <i class="fas fa-layer-group"></i>
+                                    <p>Training</p>
+                                    <span class="caret"></span>
+                                </a>
+                                <div class="collapse" id="base">
+                                    <ul class="nav nav-collapse">
+                                        <li><a href="/training"><span class="sub-item">Schedule</span></a></li>
+                                        <li><a href="/typetrain"><span class="sub-item">Type</span></a></li>
+                                    </ul>
+                                </div>
+                            </li>
 
-                        <li class="nav-item">
-                            <a data-toggle="collapse" href="#feedback">
-                                <i class="far fa-comments"></i>
-                                <p>Feedback</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="feedback">
-                                <ul class="nav nav-collapse">
-                                    <li><a href="/question"><span class="sub-item">Question</span></a></li>
-                                    <li><a href="/feedback"><span class="sub-item">Report</span></a></li>
-                                </ul>
-                            </div>
-                        </li>
+                            <li class="nav-item">
+                                <a data-toggle="collapse" href="#feedback">
+                                    <i class="far fa-comments"></i>
+                                    <p>Feedback</p>
+                                    <span class="caret"></span>
+                                </a>
+                                <div class="collapse" id="feedback">
+                                    <ul class="nav nav-collapse">
+                                        <li><a href="/question"><span class="sub-item">Question</span></a></li>
+                                        <li><a href="/feedback"><span class="sub-item">Report</span></a></li>
+                                    </ul>
+                                </div>
+                            </li>
 
-                        <li class="nav-item">
-                            <a data-toggle="collapse" href="#Account">
-                                <i class="fas fa-users-cog"></i>
-                                <p>Account</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="Account">
-                                <ul class="nav nav-collapse">
-                                    <li><a href="#"><span class="sub-item">All User</span></a></li>
-                                    <li><a href="#"><span class="sub-item">Employee</span></a></li>
-                                    <li><a href="#"><span class="sub-item">Trainer</span></a></li>
-                                    <li><a href="#"><span class="sub-item">Role</span></a></li>
-                                </ul>
-                            </div>
-                        </li>
+                            <li class="nav-item">
+                                <a data-toggle="collapse" href="#Account">
+                                    <i class="fas fa-users-cog"></i>
+                                    <p>Account</p>
+                                    <span class="caret"></span>
+                                </a>
+                                <div class="collapse" id="Account">
+                                    <ul class="nav nav-collapse">
+                                        <li><a href="#"><span class="sub-item">All User</span></a></li>
+                                        <li><a href="#"><span class="sub-item">Employee</span></a></li>
+                                        <li><a href="#"><span class="sub-item">Trainer</span></a></li>
+                                        <li><a href="#"><span class="sub-item">Role</span></a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        }
+                        else if (level == "Trainer")
+                        {
+                            <!-- Trainer -->
+                            <li class="nav-item">
+                                <a href="#">
+                                    <i class="far fa-question-circle"></i>
+                                    <p>Create Question</p>
+                                </a>
+                            </li>
 
-                        <!-- Trainer -->
-                        <li class="nav-item">
-                            <a href="#">
-                                <i class="far fa-question-circle"></i>
-                                <p>Create Question</p>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a href="widgets.html">
-                                <i class="far fa-comments"></i>
-                                <p>View Feedback</p>
-                            </a>
-                        </li>
-
-                        <!-- Employee -->
-                        <li class="nav-item">
-                            <a href="widgets.html">
-                                <i class="far fa-comments"></i>
-                                <p>Feedback</p>
-                            </a>
-                        </li>
+                            <li class="nav-item">
+                                <a href="widgets.html">
+                                    <i class="far fa-comments"></i>
+                                    <p>View Feedback</p>
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <!-- Employee -->
+                            <li class="nav-item">
+                                <a href="widgets.html">
+                                    <i class="far fa-comments"></i>
+                                    <p>Feedback</p>
+                                </a>
+                            </li>
+                        }
 
                     </ul>
                 </div>
